--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="utf-8" />
-		<title>Todo App</title>
-		<link rel="stylesheet" href="styles.css" />
-	</head>
-	<body>
-		<h1>Todo App</h1>
-		<input type="text" placeholder="Todoを入力して下さい" id="inputText"/>
-		<button type="button">Add</button>
-		<ul id="todoLists">
-		</ul>
-		<script src="scripts.js"></script>
-	</body>
+<head>
+    <meta charset="utf-8" />
+    <title>Todo App</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+    <h1>Todo App</h1>
+    <div class="input-container">
+        <input id="inputText" type="text" placeholder="Enter Text"/>
+        <button type="button" class="addButton">Add</button>
+    </div>
+    <ul id="todoLists">
+    </ul>
+    <script src="scripts.js"></script>
+</body>
 </html>
